error_analisis.txt
./Tarea_3/AnalisisVentas.java:6: error: cannot find symbol
    ArrayList<Venta> ventas = new ArrayList<>();
              ^
  symbol:   class Venta
  location: class AnalisisVentas
./Tarea_3/AnalisisVentas.java:21: error: cannot find symbol
        ventas.add(new Venta(nombre, precio, cantidad));
                       ^
  symbol:   class Venta
  location: class AnalisisVentas
./Tarea_3/AnalisisVentas.java:27: error: The value expression of a sum or product expression must be a numeric type, not <any>
                             ventas.get(i).getproducto().equals(producto) ? ventas.get(i).getprecio() * ventas.get(i).getcantidad() : 0);
                                                                          ^
./Tarea_3/AnalisisVentas.java:33: error: cannot find symbol
        for(Venta v : ventas){
            ^
  symbol:   class Venta
  location: class AnalisisVentas
./Tarea_3/AnalisisVentas.java:43: error: The value expression of a sum or product expression must be a numeric type, not <any>
    //@ ensures \result == (\sum int i; 0 <= i && i < ventas.size(); ventas.get(i).getprecio() * ventas.get(i).getcantidad);
                                                                                               ^
./Tarea_3/AnalisisVentas.java:48: error: cannot find symbol
        for(Venta v : ventas){
            ^
  symbol:   class Venta
  location: class AnalisisVentas
./Tarea_3/AnalisisVentas.java:56: error: The value expression of a sum or product expression must be a numeric type, not Venta.getcantidad
    //@ ensures \result == (\sum int i; 0 <= i && i < ventas.size(); ventas.get(i).getproducto().equals(producto) ? ventas.get(i).getcantidad() : 0);
                                                                                                                  ^
./Tarea_3/AnalisisVentas.java:62: error: cannot find symbol
        for(Venta a : ventas){
            ^
  symbol:   class Venta
  location: class AnalisisVentas
./Tarea_3/AnalisisVentas.java:79: error: cannot find symbol
        for(Venta producto : ventas){
            ^
  symbol:   class Venta
  location: class AnalisisVentas
./Tarea_3/AnalisisVentas.java:95: error: cannot find symbol
        for(Venta producto : ventas){
            ^
  symbol:   class Venta
  location: class AnalisisVentas
./Tarea_3/AnalisisVentas.java:117: error: cannot find symbol
        for(Venta v : ventas){
            ^
  symbol:   class Venta
  location: class AnalisisVentas
./Tarea_3/AnalisisVentas.java:125: error: The value expression of a sum or product expression must be a numeric type, not Venta.getcantidad
    //@ ensures \result == (productoVendido(producto) ? (\sum int i; 0 <= i && i < ventas.size(); ventas.get(i).getproducto().equals(producto) ? ventas.get(i).getcantidad() : 0) : 0);
                                                                                                                                               ^
./Tarea_3/AnalisisVentas.java:136: error: cannot find symbol
        for(Venta producto : ventas){
            ^
  symbol:   class Venta
  location: class AnalisisVentas
13 errors
